改用别的图片路径

--- a/src/pages/关于我们.md
+++ b/src/pages/关于我们.md
@@ -1,15 +1,17 @@
 
 ### 绿音 聆听不一样的环保
 ### 联系我们
-公众号：华南农业大学环保科技协会  
-QQ群：27903836 （SCAUGREEN环协交流群，所有退任的环协人都会加入，俗称“元老群”） 
-技术支持：生子当如哈士奇 （微信号：alwxkxk）
+- 公众号：华南农业大学环保科技协会  
+- QQ群：27903836   SCAUGREEN环协交流群   
+  (所有退任的环协人都会加入，俗称“元老群”） 
+- 技术支持：生子当如哈士奇 （微信号：alwxkxk）
 
 ### 有待添加的内容
 - 碳交易
 
 ### TODO List
 ABCD分别对应 重要紧急、重要不紧急、不重要紧急、不重要不紧急
+- 解决图片路径问题（A）
 - 个性化修改 与 开发指南（B）
 - SEO优化问题（B）
 - 可配置默认首页（D）
