--- a/src/pages/你问我答.md
+++ b/src/pages/你问我答.md
@@ -1,21 +1,74 @@
 # 你问我答
 
 ### 为什么树要刷白？
+因为冬季天气寒冷，但是，当白天有太阳出来，植物晒太阳并不像人们晒太阳那般舒服。我们晒完太阳后，没有太阳的晚上可以躲进被窝里，但是植物无论多冷，都是在原来的地方，这样，白天热，晚上冷，而且冷热差异很多，植物受害的地方，比我们生冻疮还严重。植物经过刷白，可以反射白天的太阳光以及各种光辐射，及时避免植物体内温度过高，从而减弱了白天与晚上的温差，避免植物受到突然变温的伤害。而且，刷白剂具有隔热效果，仿佛我们的手和脸涂防冻霜以及护肤霜。此外，秋后初冬，许多昆虫喜欢在老树皮的裂缝中产卵过冬，将树刷白对许多害虫有杀灭作用。
 
-### 大学举办的环保活动有哪些型式？
+### 有哪些环保活动？
+- CYCAN低碳节能
+- 旧衣回收
+- 宿舍节能大赛
+- 学长的火炬
+- 光盘行动
 
 ### 有哪些环保创意？
+- 太阳能公路
+- 秆工艺品
+- 雾霾戒指
+- 赏鲸代替捕鲸
 
 ### 有哪些环保组织？
+- 绿色地球（国内垃圾分类）
+- 地球之友
+- 绿点公益环保促进会 
+- 阿拉善协会
+- 创行
 
-### 什么是极端环保组织？
+### 极端环保组织？
+极端环保的产生原因往往是由于其知识水平不高、思想认识方法出现了问题，但是他们对于环保的追求，应该说是真诚的。伪环保与极端环保的不同之处在于，伪环保的动机、目的根本就不是真正的环保，而是在环保的掩盖下的其他个人或小集团的私利。
+- “动物解放阵线”（英文缩写为ALF）
+- “地球解放阵线”（英文缩写为ELF）
+- 绿色和平组织 
 
-### 屋顶绿化怎么样？
+### 什么是绿教？
+绿教与伊斯兰教相关，与环保没啥关系，穆斯林在一个地区广为繁衍生息就称为这个地区被绿化，因其传统文化与现代文明有较大冲突且伊斯兰教与恐怖组织存在一定的相关性，绿教与现代文明之间的冲突日渐严重。
 
-### 什么是自然缺失症？
+### 屋顶绿化？
+屋顶绿化有很多优点：
+- 隔热和保温功能
+- 雨水截留和回用
+- 滞尘效益
+- 增大城市的绿化面积
+那为什么大家不搞屋顶花园呢？因为它受很多限制。
+- 维护一个花园是很需要时间的，现代人大多生活节奏快，没什么时间去维护，这是比
+较主要原因之一。
+- 不是所有屋顶都适合做花园，建筑结构要牢固，有足够的承重能力。其次，还要做好
+防水，排水，防根系入侵等一系列大量问题。
 
-### 什么是环保酵素？
+### 为什么下雨天里的睡眠质量特别好？
+不光雨声如此，水声、风声、树声、蝉鸣、蛙鸣、鸟鸣，以及观看美好的自然都有同样或者类似的的效果。短暂的自然环境体验(比如观看森林、田野照片，听到自然界的雨声鸟鸣)，也能显着的让人感受到关爱、愉悦、友好、释放，更少的恐惧、压力等。而该现象被称为"RestorativeEffects of Natural Environment Experiences" (自然环境体验的恢复作用)
+
+### 自然缺失症？
+常常亲近自然对身体有极大的好处，我们生活环境与自然越亲近，越能使我们释放掉压力。长期生活在现代城市而不与大自然接触，会导致很多行为与心理上的问题。
+
+### 环保酵素？
+环保酵素是混合了糖和水的厨余(鲜垃圾) 经发酵后产生的棕色液体。用途比较多，主要用于家居清洁。
 
 ### 全面实现有机农业可行吗？
+有机农业虽然节约了化肥少用了农药，但却是以更高的人力成本，更低的产量为代价，全面实现有机农业将会养不起这么多人口，所以全面实现有机农业还需要考虑人口问题，并不可行。
+
+### 全国大学节能环保大赛？
+全国大学生节能减排社会实践与科技竞赛,竞赛作品分为“社会实践调查”和“科技制作”两类，前者为调研报告（B类），后者为科技发明作品（A类），主题都是要紧扣节能环保方面。(可自行百度可以查找到入围作品进行详细参考，判断出具体难度)科技发明作品（A类），一般的学生单靠自己五六个人是无法做出那样的作品。（主要是经费问题，B类所需经费少故问题不大）。与好多比赛类似，这种比赛多会直接使用老师的项目作品（本身就有经费支持），再辅以紧扣主题的论文来参加比赛。（但凡科技类都是发展生产力，效率更高自然也更节能）一般不要幻想着在比赛前一个月单靠自己团队的实力就能做出像样的作品来参赛，因为同台竞争的作品大多是老师带领的项目且已经做到一定程度（做了大半年甚至一两年的项目），顺手参加比赛刷刷政绩而已。
+
+### 有哪些书值得推荐？
+- 《经济学原理》-曼昆
+- 《地球法则》
+
+
+### 有待补充问题
+- 碳交易？ 
+- 共享单车管理问题？
+
+欢迎大家联系我们进行话题补充
+
 
 
