--- a/src/pages/关于我们.md
+++ b/src/pages/关于我们.md
@@ -1,20 +1,23 @@
+# 关于我们
+### 绿音
+绿音 聆听不一样的环保
+目标：让大学新生在十几分钟里的快速浏览里扩展环保视野
 
-### 绿音 聆听不一样的环保
+### 绿音发展历程
+- 每周收集整理大量的环保资讯发布在环协公众号中。
+- 试图以脚本的形式自动收集文本，减轻收集所消耗的人力。
+- 使用新浪快站建设绿音网。
+- 自行建设静态网站。
+在建设与探索的过程中，前期整理大量的环保资讯进行发布，但由于阅读需求量小，后来就减少了发布，改用网站的形式呈现，有阅读需求的读者可以自行通过网站了解。后来进一步改良为，总结归纳大量环保知识，让大学新生在十几分钟的快速扫描浏览里，扩展他们的环保视野。
+
 ### 联系我们
 - 公众号：华南农业大学环保科技协会  
-- QQ群：27903836   SCAUGREEN环协交流群   
-  (所有退任的环协人都会加入，俗称“元老群”） 
+- QQ群：27903836  环协元老群    
 - 技术支持：生子当如哈士奇 （微信号：alwxkxk）
 
-### 有待添加的内容
-- 碳交易
 
-### TODO List
-ABCD分别对应 重要紧急、重要不紧急、不重要紧急、不重要不紧急
-- 解决图片路径问题（A）
-- 个性化修改 与 开发指南（B）
-- SEO优化问题（B）
-- 可配置默认首页（D）
-- 国内访问 网络加速问题（B）
-- 打包时能加载img路径问题（D）
+
+
+
+
 
