--- a/src/pages/绿音.md
+++ b/src/pages/绿音.md
@@ -25,5 +25,5 @@
 以前对废旧电池的危害宣传源于“汞电池”，如今无汞电池污染相对较低，同时回收处理再利用技术仍不成熟，不建议收集处理，除非能找到对应公司回收处理。
 
 ### 不盲目反对核电
-在表达反对核电这个观点之前，希望你能清楚地知道核电的众多优势，而不是一无所知就单凭辐射就大喊反对。
+在表达反对核电这个观点之前，希望你能清楚地知道核电的众多优势，而不是一无所知就单凭辐射就大喊反对，盲目无知的人最容易被操控并自以为做了好事。
 
