index.css使用的背景图 改用七牛云路径

--- a/src/pages/你问我答.md
+++ b/src/pages/你问我答.md
@@ -24,25 +24,16 @@
 - 创行
 
 ### 极端环保组织？
-极端环保的产生原因往往是由于其知识水平不高、思想认识方法出现了问题，但是他们对于环保的追求，应该说是真诚的。伪环保与极端环保的不同之处在于，伪环保的动机、目的根本就不是真正的环保，而是在环保的掩盖下的其他个人或小集团的私利。
 - “动物解放阵线”（英文缩写为ALF）
 - “地球解放阵线”（英文缩写为ELF）
 - 绿色和平组织 
+极端环保的产生原因往往是由于其知识水平不高、思想认识方法出现了问题，但是他们对于环保的追求，应该说是真诚的。伪环保与极端环保的不同之处在于，伪环保的动机、目的根本就不是真正的环保，而是在环保的掩盖下的其他个人或小集团的私利。
 
 ### 什么是绿教？
 绿教与伊斯兰教相关，与环保没啥关系，穆斯林在一个地区广为繁衍生息就称为这个地区被绿化，因其传统文化与现代文明有较大冲突且伊斯兰教与恐怖组织存在一定的相关性，绿教与现代文明之间的冲突日渐严重。
 
-### 屋顶绿化？
-屋顶绿化有很多优点：
-- 隔热和保温功能
-- 雨水截留和回用
-- 滞尘效益
-- 增大城市的绿化面积
-那为什么大家不搞屋顶花园呢？因为它受很多限制。
-- 维护一个花园是很需要时间的，现代人大多生活节奏快，没什么时间去维护，这是比
-较主要原因之一。
-- 不是所有屋顶都适合做花园，建筑结构要牢固，有足够的承重能力。其次，还要做好
-防水，排水，防根系入侵等一系列大量问题。
+### 为什么屋顶绿化很少见？
+维护一个花园是很需要时间的，现代人大多生活节奏快，没什么时间去维护，这是比较主要原因之一。不是所有屋顶都适合做花园，建筑结构要牢固，有足够的承重能力。其次，还要做好防水，排水，防根系入侵等一系列大量问题。
 
 ### 为什么下雨天里的睡眠质量特别好？
 不光雨声如此，水声、风声、树声、蝉鸣、蛙鸣、鸟鸣，以及观看美好的自然都有同样或者类似的的效果。短暂的自然环境体验(比如观看森林、田野照片，听到自然界的雨声鸟鸣)，也能显着的让人感受到关爱、愉悦、友好、释放，更少的恐惧、压力等。而该现象被称为"RestorativeEffects of Natural Environment Experiences" (自然环境体验的恢复作用)
