--- a/src/pages/关于我们.md
+++ b/src/pages/关于我们.md
@@ -1,13 +1,15 @@
 # 关于我们
 ### 绿音
-绿音 聆听不一样的环保
-目标：让大学新生在十几分钟里的快速浏览里扩展环保视野
+- 聆听不一样的环保  
+- 目标：让大学新生在十几分钟里的快速浏览里扩展环保视野
+- 仍在不断建设与完善当中
 
 ### 绿音发展历程
 - 每周收集整理大量的环保资讯发布在环协公众号中。
 - 试图以脚本的形式自动收集文本，减轻收集所消耗的人力。
 - 使用新浪快站建设绿音网。
-- 自行建设静态网站。
+- 自行建设静态网站。  
+
 在建设与探索的过程中，前期整理大量的环保资讯进行发布，但由于阅读需求量小，后来就减少了发布，改用网站的形式呈现，有阅读需求的读者可以自行通过网站了解。后来进一步改良为，总结归纳大量环保知识，让大学新生在十几分钟的快速扫描浏览里，扩展他们的环保视野。
 
 ### 联系我们
