补充部分内容

--- a/src/pages/最后的思考.md
+++ b/src/pages/最后的思考.md
@@ -2,7 +2,7 @@
 环保因何而起？环保的真正目的是什么？思考这些终极的哲学问题，才能走在正确的道路上。__（此文仅是个人观点）__
 
 ### 跨越食物链之巅
-在短短的N千年里，人类跨越食物链之巅，速度之快以至于生态系统无法及时形成克制人类的物种，人类成为地球的主宰。没有外部竞争，人口不断膨胀，当超出当地生态极限便使得天灾更严重，人祸更频繁，人口大量减少甚至会导致整个地区的文明因此而消失。至此，为了降低天灾人祸的损失，可持续发展应运而生，环保追求人与生态间的平衡，人类文明也因此免受因生态破坏所带来的灾难。
+在短短的几百万年里，人类跨越食物链之巅，速度之快以至于生态系统无法及时形成克制人类的物种，人类成为地球的主宰。没有外部竞争，人口不断膨胀，当超出当地生态极限便使得天灾更严重，人祸更频繁，人口大量减少甚至会导致整个地区的文明因此而消失。至此，为了降低天灾人祸的损失，可持续发展应运而生，环保追求人与生态间的平衡，人类文明也因此免受因生态破坏所带来的灾难。
 
 ### 环保是以人为本
 环保的起源决定了环保是服务于人类，即为了人类个体上拥有更好的生活环境，人类整体上能更好地延续下去，而保持生态平衡，所以__让人类灭绝以恢复地球的生态这类观点是错误的__，以人为本变成了以地球为本，脱离了正确的方向。人类的环保行动作用于地球生态，生态反哺于人类更好的生活环保。在这个循环里，始于人类，途经地球生态，终于人类，如果说环保是为了人类，那么环保的最终目标本质上是与人类的目标是一致的。
