--- a/src/pages/关于我们.md
+++ b/src/pages/关于我们.md
@@ -1,21 +1,30 @@
 # 关于我们
 ### 绿音
 - 聆听不一样的环保  
-- 目标：让大学新生在十几分钟里的快速浏览里扩展环保视野
-- 仍在不断建设与完善当中
+- 目标：扩展大学新生环保视野
+- 欢迎大家投稿~
 
 ### 绿音发展历程
 - 每周收集整理大量的环保资讯发布在环协公众号中。
-- 试图以脚本的形式自动收集文本，减轻收集所消耗的人力。
+- 以脚本的形式自动收集文本，试图减轻收集所消耗的人力。
 - 使用新浪快站建设绿音网。
 - 自行建设静态网站。  
 
 在建设与探索的过程中，前期整理大量的环保资讯进行发布，但由于阅读需求量小，后来就减少了发布，改用网站的形式呈现，有阅读需求的读者可以自行通过网站了解。后来进一步改良为，总结归纳大量环保知识，让大学新生在十几分钟的快速扫描浏览里，扩展他们的环保视野。
 
+### 开发相关
+此静态网站托管于github，全部源代码均开源。https://github.com/alwxkxk/scaugreen  
+其它外校环协想制作类似网站可自行修改，或联系本站技术支持协助。
+
 ### 联系我们
-- 公众号：华南农业大学环保科技协会  
-- QQ群：27903836  环协元老群    
-- 技术支持：生子当如哈士奇 （微信号：alwxkxk）
+公众号:华南农业大学环保科技协会 
+![华南农业大学环保科技协会](图片链接 "华南农业大学环保科技协会 公众号")
+环协元老群:27903836
+![27903836](http://ox6t89mri.bkt.clouddn.com/scaugreen-QQ-QR.jpg "环协元老群 QQ群")
+技术支持:alwxkxk
+![微信号：alwxkxk](http://ox6t89mri.bkt.clouddn.com/alwxkxk-RQ.jpg "技术支持") 
+
+
 
 
 
