--- a/src/pages/关于我们.md
+++ b/src/pages/关于我们.md
@@ -17,11 +17,9 @@
 其它外校环协想制作类似网站可自行修改，或联系本站技术支持协助。
 
 ### 联系我们
-公众号:华南农业大学环保科技协会 
-![华南农业大学环保科技协会](图片链接 "华南农业大学环保科技协会 公众号")
-环协元老群:27903836
+- 环协元老群  
 ![27903836](http://ox6t89mri.bkt.clouddn.com/scaugreen-QQ-QR.jpg "环协元老群 QQ群")
-技术支持:alwxkxk
+- 技术支持  
 ![微信号：alwxkxk](http://ox6t89mri.bkt.clouddn.com/alwxkxk-RQ.jpg "技术支持") 
 
 
