修改了背景与图片的显示方式，补充了部分内容

--- a/src/pages/你问我答.md
+++ b/src/pages/你问我答.md
@@ -9,6 +9,7 @@
 - 宿舍节能大赛
 - 学长的火炬
 - 光盘行动
+- 环保课堂
 
 ### 有哪些环保创意？
 - 太阳能公路
@@ -17,15 +18,14 @@
 - 赏鲸代替捕鲸
 
 ### 有哪些环保组织？
-- 绿色地球（国内垃圾分类）
+- 绿色地球
 - 地球之友
 - 绿点公益环保促进会 
 - 阿拉善协会
-- 创行
 
 ### 极端环保组织？
-- “动物解放阵线”（英文缩写为ALF）
-- “地球解放阵线”（英文缩写为ELF）
+- 动物解放阵线
+- 地球解放阵线
 - 绿色和平组织   
 
 极端环保的产生原因往往是由于其知识水平不高、思想认识方法出现了问题，但是他们对于环保的追求，应该说是真诚的。伪环保与极端环保的不同之处在于，伪环保的动机、目的根本就不是真正的环保，而是在环保的掩盖下的其他个人或小集团的私利。
@@ -36,7 +36,7 @@
 ### 为什么屋顶绿化很少见？
 维护一个花园是很需要时间的，现代人大多生活节奏快，没什么时间去维护，这是比较主要原因之一。不是所有屋顶都适合做花园，建筑结构要牢固，有足够的承重能力。其次，还要做好防水，排水，防根系入侵等一系列大量问题。
 
-### 为什么下雨天里的睡眠质量特别好？
+### 下雨天里的睡眠质量特别好？
 不光雨声如此，水声、风声、树声、蝉鸣、蛙鸣、鸟鸣，以及观看美好的自然都有同样或者类似的的效果。短暂的自然环境体验(比如观看森林、田野照片，听到自然界的雨声鸟鸣)，也能显着的让人感受到关爱、愉悦、友好、释放，更少的恐惧、压力等。而该现象被称为"RestorativeEffects of Natural Environment Experiences" (自然环境体验的恢复作用)
 
 ### 自然缺失症？
@@ -55,12 +55,25 @@
 - 《经济学原理》-曼昆
 - 《地球法则》
 
+### 值得推荐的公众号？
+- 中国慈善家
+- 物种日历
 
-### 有待补充问题
-- 碳交易？ 
-- 共享单车管理问题？
 
-欢迎大家联系我们进行话题补充
+### 有待补充列表
+- 碳交易 
+- 共享单车泛滥问题
+- 环保规定过严，执法随意的问题
+- 过度包装问题
+- 垃圾分类问题
+- 外卖盛行下的垃圾问题
+- 末日种子库
+- 太阳能板、电池制作过程中的污染问题
+- 环境监测数据造假问题（如在监测器旁边喷水雾）
+- 垃圾焚烧发电的污染问题
+
+
+大家觉得有什么值得推荐需要添加进入，欢迎联系我们
 
 
 
