--- a/src/pages/绿音.md
+++ b/src/pages/绿音.md
@@ -19,11 +19,15 @@
 盲目放生要么无法适应而大批死亡，要么造成生物入侵破坏生态，以放生为功德是假，禁止滥捕与保护栖息地才是真正的功德无量。
 
 ### 城市更环保
-城市人口密度大，公共交通方便，公用资源利用率高，使得城市人均消耗远低于生活在郊区与农村人均消耗。
+城市人口密度大，公共交通方便，公用资源利用率高，使得城市人均消耗远低于生活在郊区与农村人均消耗。城市生活恰恰是减轻人类对野生生物区和濒危生物区造成压力的最佳方式。
 
 ### 不盲目回收无汞废旧电池 
 以前对废旧电池的危害宣传源于“汞电池”，如今无汞电池污染相对较低，同时回收处理再利用技术仍不成熟，不建议收集处理，除非能找到对应公司回收处理。
 
 ### 不盲目反对核电
 在表达反对核电这个观点之前，希望你能清楚地知道核电的众多优势，而不是一无所知就单凭辐射就大喊反对，盲目无知的人最容易被操控并自以为做了好事。
+
+### 环保拯救的是人类而不是地球
+丁仲礼：“我很乐观，我是地质学家，我研究几亿年来的地球环境演化。这不是人类拯救地球的问题，是人类拯救自己的问题，地球用不着你拯救，地球温度比现在高十几度的时候有的是，地球二氧化碳浓度比现在高十倍的时候有的是，地球都是这么演化过来的，都好好的。毁灭的只是物种，是人类自己，所以是人类如何拯救人类。”
+
 
