--- a/src/pages/最后的思考.md
+++ b/src/pages/最后的思考.md
@@ -1,5 +1,5 @@
 # 最后的思考
-环保因何而起？环保的真正目的是什么？思考这些终极的哲学问题，才能走在正确的道路上。__（此文仅是个人观点）__
+环保因何而起？环保的真正目的是什么？思考这些终极的哲学问题，才能走在正确的道路上。__（此文属个人观点，仅供抛砖引玉，环保的意义具体还是需要自己来认真思考。）__
 
 ### 跨越食物链之巅
 在短短的几百万年里，人类跨越食物链之巅，速度之快以至于生态系统无法及时形成克制人类的物种，人类成为地球的主宰。没有外部竞争，人口不断膨胀，当超出当地生态极限便使得天灾更严重，人祸更频繁，人口大量减少甚至会导致整个地区的文明因此而消失。至此，为了降低天灾人祸的损失，可持续发展应运而生，环保追求人与生态间的平衡，人类文明也因此免受因生态破坏所带来的灾难。
@@ -10,6 +10,5 @@
 ### 环保的最终目标
 人类的目标到底是什么？这个问题似乎并不能直接回答出来，我只知道每个人都在追求更好更舒适的生活，这或许就是答案。每个人都在追求更好的生活，社会生产力不断向前发展，科学不断进步，也因每一个人体的追求而共同创造出灿烂的人类文明。__以环保之名反对科技进步回归原始的丛林生活这类观点也是错误的__，这其实违背了人们的追求。环保的最终目标就是辅助人类追求更好更舒适的生活，我们也能想象出最美好的结果：__人类科技飞速发展，人们生活水平不断提高，与此同时合理管理生态环境实现与大自然和谐相处，大自然呈现出活跃多彩的景象，到处充满着生命的跃动，人类与大自然生态共同繁荣__。
 
-#### 欢迎补充
 
 
